--- a/react-app/src/styles/search.css
+++ b/react-app/src/styles/search.css
@@ -1,19 +1,25 @@
 :root {
     --nav-width: 20%;
     --nav-height: 30px;
+    font-family: Helvetica, Arial, sans-serif;
+    --bg-color: white;
 }
-
 .bar-container {
     position: sticky;
+    z-index: 10;
+    background-color: var(--bg-color);
+    filter: drop-shadow(0px 7px 4px rgba(100, 100, 100, 0.5));
 }
-
 .bar-container button {
     border-width: 0.5px;
     width: 80px;
     height: var(--nav-height);
     text-align: center;
+    background-color: var(--bg-color);
 }
-
+button :hover {
+    cursor:pointer;
+}
 .searchbar {
     height: var(--nav-height);
     width: 40%;
@@ -25,27 +31,37 @@
     height: var(--nav-height);
     width: 80%;
 }
-
 .filterbar {
     display: inline-block;
 }
-
 .filterbar-item {
     width: calc(var(--nav-size)*0.8);
     list-style: none;
 }
-
 .filterbar-list {
     max-width: 80%;
     height: 100%;
     display: flex;
     justify-content: flex-end;
 }
-
 .dropdown {
     position: absolute;
     top: fit-content;
-    z-index: 100;
     width: 300px;
-    background-color: aqua;
+    background-color: var(--bg-color);;
+    text-align: justify;
+    border: 10px;
+    border-color: black;
+}
+.dropdown-section {
+    display: inline-block;
+    margin: 15px;
+}
+.dropdown-section h3 {
+    display: inline-block;
+    margin-bottom: 5px;
+    margin-top: 0px;
+}
+.item-label {
+    display:block;
 }
