--- a/react-app/src/styles/App.css
+++ b/react-app/src/styles/App.css
@@ -1,8 +1,14 @@
 .leaflet-container {
-    width: 100vw;
+    width: 60vw;
     height: 90vw;
-    z-index: 0;
+    position: relative;
+    display: inline-block;
 }
-.map-container li {
-    list-style: none;
+.map {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 0;
+    display: inline-block;
+    overflow: hidden;
 }
