--- a/react-app/src/styles/App.css
+++ b/react-app/src/styles/App.css
@@ -2,7 +2,7 @@
     width: 60vw;
     height: 90vw;
     position: relative;
-    display: inline-block;
+    display: inline-flex;
 }
 .map {
     width: 100%;
