--- a/react-app/src/styles/resultpane.css
+++ b/react-app/src/styles/resultpane.css
@@ -7,8 +7,6 @@
     height: 100vw;
     width: 39vw;
     z-index: 2;
-    border: black;
-    border-width: 10px;
     position: relative;
     display: flex;
     overflow-y:auto;
@@ -22,7 +20,7 @@
     display: inline-block;
     border-radius: 5px;
     border-style: solid;
-    border-width: 2px;
+    border-width: 1px;
     border-color: lightgrey;
 }
 .listing:hover {
@@ -43,4 +41,8 @@
 }
 a {
     text-decoration: none;
+}
+.sort {
+    text-align: right;
+    margin-right: 20px;
 }
